objects/Program_Package__c.object
<CustomObject>
    <description>Used to track the programs that are packaged an offered to a client.  There should only be one program package offered to each client each fiscal year.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID (project)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TrackS Royall renewal ownership</description>
        <label>Account SL</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Packages_Royall</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>(R) Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Institution this Program Package belongs to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Program_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Invoice_Delta__c</fullName>
        <description>This is ([Total Scheduled Invoice Amount]-[Total Actual Invoice Amount]).</description>
        <formula>Total_Scheduled_Invoice_Amount__c - Total_Actual_Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is ([Total Scheduled Invoice Amount]-[Total Actual Invoice Amount]).</inlineHelpText>
        <label>Actual Invoice Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Common_App_03__c</fullName>
        <label>Actual Quantity (DW:Common App 03)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>03,09,15,14</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Campaign_New__c</field>
            <operation>equals</operation>
            <value>Application Marketing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted, Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Fulfillment_02__c</fullName>
        <label>Actual Quantity (DW:Fulfillment 02)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>02</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Campaign_New__c</field>
            <operation>equals</operation>
            <value>Fulfillment, Sr. Search/SNR Fulfillment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Graduate_App_Mkt_31__c</fullName>
        <label>Actual Quantity (DW:Graduate App Mkt 31)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>31</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Royall_App_03__c</fullName>
        <label>Actual Quantity (DW:Royall App 03)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Campaign_New__c</field>
            <operation>equals</operation>
            <value>Royall Application</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted, Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Search_NR_09__c</fullName>
        <label>Actual Quantity (DW:Search NR 09)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>09</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Search__c</fullName>
        <description>READ-ONLY: Roll-up from Programs to display aggregate of all Search programs - ACTUAL Contact Quantities from DataWarehouse</description>
        <inlineHelpText>READ-ONLY: Roll-up from Programs to display aggregate of all Search programs - ACTUAL Contact Quantities from DataWarehouse</inlineHelpText>
        <label>Actual Quantity (DW:Search 01)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>01</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Senior_Search_15__c</fullName>
        <label>Actual Quantity (DW:Senior Search 15)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>15</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity_DW_Transfer_App_18__c</fullName>
        <label>Actual Quantity (DW:Transfer App 18)</label>
        <summarizedField>Royall_Program__c.Actual_Quantity_DW__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>18</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>At_Risk_Notes__c</fullName>
        <description>Additional notes about why a client may be at risk.</description>
        <inlineHelpText>Enter additional notes to describe why a school is At Risk if the the available reasons to select are insufficient.</inlineHelpText>
        <label>At Risk Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason_Other__c</fullName>
        <description>If &quot;Other&quot; is selected as a reason at risk, an explanation is required.</description>
        <inlineHelpText>If &quot;Other&quot; is selected as a reason a client is at risk, an explanation is required.</inlineHelpText>
        <label>At Risk Reason Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason__c</fullName>
        <description>Indicates the reasons a client may be at risk.</description>
        <inlineHelpText>Select all of the reasons that a client may be at risk this year.</inlineHelpText>
        <label>At Risk Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Client Contact has gone silent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitively Vulnerable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragile Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Must make their class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Contact Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Institutional Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please explain)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client_Lost_Date__c</fullName>
        <inlineHelpText>Exact date client terminated relationship.</inlineHelpText>
        <label>Client Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Status_New__c</fullName>
        <label>(R) Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Accounting Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Rollup__c</fullName>
        <inlineHelpText>Earliest date of Contract Sent across all Programs/Jobs.</inlineHelpText>
        <label>Contract Sent Rollup</label>
        <summarizedField>Royall_Program__c.Contract_Sent__c</summarizedField>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <inlineHelpText>Date contract sent to the client</inlineHelpText>
        <label>Contract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signature_Date__c</fullName>
        <description>This is the date the client signed the contract.</description>
        <inlineHelpText>This is the date the client signed the contract.</inlineHelpText>
        <label>Contract Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Rollup__c</fullName>
        <inlineHelpText>Earliest date of Contract Signed across all Programs/Jobs.</inlineHelpText>
        <label>Contract Signed  Rollup</label>
        <summarizedField>Royall_Program__c.Contract_Signature_Date__c</summarizedField>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Common_App_Mktg_03__c</fullName>
        <label>Contracted Quantity (Common App Mktg 03)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>03,09,15,14</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Campaign_New__c</field>
            <operation>equals</operation>
            <value>Application Marketing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Fulfillment_02__c</fullName>
        <label>Contracted Quantity (Fulfillment 02)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>02</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Grad_App_Mktg_31__c</fullName>
        <label>Contracted Quantity (Grad App Mktg 31)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>31</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Royall_App_03__c</fullName>
        <label>Contracted Quantity (Royall App 03)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Campaign_New__c</field>
            <operation>equals</operation>
            <value>Royall Application</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Search_NR_09__c</fullName>
        <label>Contracted Quantity (Search NR 09)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>09</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Search__c</fullName>
        <label>Contracted Quantity (Search 01)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>01</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Senior_Search_15__c</fullName>
        <label>Contracted Quantity (Senior Search 15)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>15</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracted_Quantity_Transfer_App18__c</fullName>
        <label>Contracted Quantity (Transfer App 18)</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Name</field>
            <operation>contains</operation>
            <value>18</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EAB_First_Day_Persistence_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PP level indicator for any Royall CFY Clients who are subscribed to &quot;EAB First Day Persistence&quot;</description>
        <inlineHelpText>PP level indicator for any Royall CFY Clients who are subscribed to &quot;EAB First Day Persistence&quot;</inlineHelpText>
        <label>EAB First Day Persistence Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_Date__c</fullName>
        <inlineHelpText>Read-Only field, used to auto-populate the appropriate calendar date from the FY field.</inlineHelpText>
        <label>FY Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Royall&apos;s fiscal year for this Program Package</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Contracted_Programs__c</fullName>
        <formula>IF(Total_Adjusted_Program_Cost__c&gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Contracted Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <inlineHelpText>The company the lost client is now working with</inlineHelpText>
        <label>Lost To</label>
        <picklist>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alloy Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EducationDynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Engine Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hutchinson Allgood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawlor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LF O’Connell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McArdle Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mindpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noel-Levitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parrish Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RuffaloCODY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark 451</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TargetX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Zen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Way Better Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Lost_To__c</fullName>
        <label>Other Lost To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason_for_Loss__c</fullName>
        <inlineHelpText>If not on list above, or split with another vendor, list who the client left Royall for and any details that are relevant.</inlineHelpText>
        <label>Other Reason for Loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved__c</fullName>
        <inlineHelpText>Date pricing proposal approved by the institution</inlineHelpText>
        <label>Proposal Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_Rollup__c</fullName>
        <inlineHelpText>Earliest date of Proposal Sent across all Programs/Jobs.</inlineHelpText>
        <label>Proposal Sent Rollup</label>
        <summarizedField>Royall_Program__c.Proposal_Sent__c</summarizedField>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <inlineHelpText>Date pricing proposal sent to client.</inlineHelpText>
        <label>Proposal Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if a purchase order is required.</description>
        <label>Purchase Order Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <inlineHelpText>Date RFP response due back to the institution</inlineHelpText>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Release_Date__c</fullName>
        <inlineHelpText>Date institution published this RFP</inlineHelpText>
        <label>RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_Account_Status__c</fullName>
        <formula>IF(
   OR( Account__r.r_Current_Year_Status__c =&apos;Secured&apos;,
         Account__r.r_Current_Year_Status__c =&apos;Committed&apos;)
   , 
   IF(
     OR(Account__r.r_Previous_Year_Status__c = &apos;Lost&apos;,
        ISBLANK(Account__r.r_Previous_Year_Status__c))
     ,&apos;New Client&apos;
     ,&apos;Existing Client&apos;
   )
   ,&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(R) Account Status (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <description>The stated (or inferred) reason a client provided for severing the partnership with Royall.</description>
        <inlineHelpText>The reason the lost client provided for ending our partnership</inlineHelpText>
        <label>Reason for Loss</label>
        <picklist>
            <picklistValues>
                <fullName>Change in Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could accomplish goals &apos;on their own&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disappointed with Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disappointed with Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price/Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royall Ended Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Invoice_Delta__c</fullName>
        <description>This is ([Total Adjusted Contracted Program Cost]+[Total Adjusted Contracted Postage Cost])–([Total Scheduled Invoice Amount]).</description>
        <formula>(Total_Adjusted_Contracted_Program_Cost__c + Total_Adjusted_Contracted_Postage_Cost__c )-(Total_Scheduled_Invoice_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is ([Total Adjusted Contracted Program Cost]+[Total Adjusted Contracted Postage Cost])–([Total Scheduled Invoice Amount]).</inlineHelpText>
        <label>Scheduled Invoice Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toggle_Client_Status_Update_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle Client Status Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toggle_Client_Status_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle Account Client Status Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Invoice_Amount__c</fullName>
        <description>Sum of the actual invoices sent.
Field to Aggregate:	&quot;Actual Gross Invoice Amount&quot;   [Object: Program Package INVOICE (Royall)]</description>
        <inlineHelpText>Sum of the actual invoices sent.
Field to Aggregate:	&quot;Actual Gross Invoice Amount&quot;   [Object: Program Package INVOICE (Royall)]</inlineHelpText>
        <label>Total Actual Invoice Amount</label>
        <summarizedField>Invoice_Royall__c.Actual_Gross_Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Royall__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Contracted_Cost__c</fullName>
        <description>This is the ([Total Adjusted Contracted Program Cost]+[ Total Adjusted Contracted Postage Cost]).</description>
        <formula>Total_Adjusted_Contracted_Program_Cost__c + Total_Adjusted_Contracted_Postage_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the ([Total Adjusted Contracted Program Cost]+[ Total Adjusted Contracted Postage Cost]).</inlineHelpText>
        <label>Total Adjusted Contracted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Contracted_Postage_Cost__c</fullName>
        <description>This is the &quot;Total Contracted Postage Cost&quot; minus the &quot;Total Adjusted Postage Cost&quot;.</description>
        <formula>Total_Contracted_Postage_Cost__c -  Total_Adjusted_Postage_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the &quot;Total Contracted Postage Cost&quot; minus the &quot;Total Adjusted Postage Cost&quot;.</inlineHelpText>
        <label>Total Adjusted Contracted Postage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Contracted_Program_Cost__c</fullName>
        <description>Formula ($): &apos;Total Contracted Program Cost&apos; - &apos;Total Adjusted Program Cost&apos;</description>
        <formula>Total_Contracted_Program_Cost__c  -  Total_Adjusted_Program_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula ($): &apos;Total Contracted Program Cost&apos; - &apos;Total Adjusted Program Cost&apos;</inlineHelpText>
        <label>Total Adjusted Contracted Program Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Postage_Cost__c</fullName>
        <description>Sum of (CONTRACTED) Postage Costs for: All Accounting Adjustments 
Field to Aggregate: Program (Royall)&gt; &apos;Postage Cost&apos;
Filter Criteria: Status = &quot;Contracted&quot; &amp; Type = &quot;Discount Allocation, Accounting adjustment, Line of Business transfer&quot;</description>
        <inlineHelpText>Sum of (CONTRACTED) Postage Costs for: All Accounting Adjustments 
Field to Aggregate: Program (Royall)&gt; &apos;Postage Cost&apos;
Filter Criteria: Status = &quot;Contracted&quot; &amp; Type = &quot;Discount Allocation, Accounting adjustment, Line of Business transfer&quot;</inlineHelpText>
        <label>Total Adjusted Postage Cost</label>
        <summarizedField>Royall_Program__c.Postage_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Type__c</field>
            <operation>equals</operation>
            <value>Discount Allocation, Accounting adjustment, Line of Business transfer</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>